@@ -355,6 +355,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
 
        Mitsubishi CP3020D/DU/DE (EXPERIMENTAL)
        Mitsubishi CP3020DA/DAE  (EXPERIMENTAL)
+       Mitsubishi CP9550D/DW    (EXPERIMENTAL)
 
 	None of these have been tested and confirmed to work (or not), so 
 	feedback is welcome.  
